fixed animation overflow

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -66,7 +66,6 @@ header {
 }
 
 #navigation {
-    display: none;
     transform: translateX(100%);
     transition: transform 0.3s ease-in-out;
     position: absolute;
@@ -110,6 +109,10 @@ header {
     position: absolute;
     top: 1rem;
     right: 1rem;
+}
+
+body {
+    overflow-x: hidden;
 }
 
 #weather {
